--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@strapi/plugin-users-permissions": "4.25.5",
     "@strapi/strapi": "4.25.5",
     "better-sqlite3": "8.6.0",
+    "mysql": "^2.18.1",
     "pg": "^8.12.0",
     "pg-connection-string": "^2.6.4",
     "react": "^18.0.0",
